# self-play-ai

./: .gitignore  Cargo.toml  chess.ipynb  dummy_multi_output_model.ipynb  env.yml  tictactoe_model.pt  tictactoe_model.py
chess-engine/: Cargo.toml  README.md
chess-engine/src/: learner.rs  learner_concurrent.rs  learner_parallel.rs  main.rs  mcts.rs  mcts_parallel.rs  model.rs  tictactoe.rs
chess-engine/src/game/: chess.rs  mod.rs  tictactoe.rs
chess-engine/src/model/: chess.rs  mod.rs  tictactoe.rs
src/: main.rs  mcts.rs
src/game/: chess.rs  connect_four.rs  tictactoe.rs
src/model/: chess.rs  connect_four.rs  tictactoe.rs
