[package]
name = "chess-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
tch = "0.13"
strum = "0.25"
strum_macros = "0.25"
rand = "0.8.5"
rand_distr = "0.4.3"
# anyhow = "1.0.71"
